<resources>
    <string name="app_name">Telephone Directory</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="donot_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up!</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="required">Required</string>
    <string name="required_username">Required username</string>
    <string name="required_password">Required password</string>
    <string name="password_can_not_exceed_8_characters">Password can not exceed 8 characters</string>
    <string name="password_set_successfully">Password Set Successfully</string>
    <string name="password_do_not_match">Password do not match</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_valid_email_id">Enter valid email id</string>
    <string name="enter_password">Enter password</string>
    <string name="chatzulu">chatzulu</string>
    <string name="tvsignup">Signup</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="contact_image">Contact image</string>
    <string name="add_name">Add Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
    <string name="version_prefix">v</string>
    <string name="all_fields_required">All fields required!</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="are_you_sure_want_to_delete">Are you sure want to delete?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="full_name">Full Name</string>
    <string name="contact_form_title">Add New Contact Form</string>
    <string name="phone_number">Phone Number</string>
    <string name="nick_name">Nick Name</string>
    <string name="address">Address</string>
    <string name="work_info">Work Info</string>
    <string name="relationship">Relationship</string>
    <string name="website">Website</string>
    <string name="reset">Reset</string>
    <string name="full_name_required">FullName Required!</string>
    <string name="invalid_phone">Invalid Phone Number</string>
    <string name="phone_required">Required Phone Number</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="contact_deleted_successfully">Contact Deleted Successfully</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
</resources>