<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="11dp"
        android:layout_alignParentEnd="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ll_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="11dp">

            <ImageView
                android:id="@+id/iv_contact"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:background="@drawable/avatar"
                android:contentDescription="@string/contact_image" />

            <LinearLayout

                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="22dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/delete" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_call"
                android:layout_width="22dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/contact1" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>