<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/civ_profile_image"
                android:layout_width="172dp"
                android:layout_height="172dp"
                android:src="@drawable/baseline_person_24"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/light_grey" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/baseline_photo_camera"
                app:backgroundTint="@color/light_blue"
                app:shapeAppearanceOverlay="@style/Theme.AppCompat"
                app:tint="@color/white" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:clickable="false"
            android:hint="@string/full_name"
            android:inputType="text"
            app:startIconDrawable="@drawable/baseline_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:clickable="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:startIconDrawable="@drawable/baseline_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:clickable="false"
            android:hint="@string/phone_number"
            android:inputType="number"
            app:startIconDrawable="@drawable/baseline_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            style="@style/CustomButton"
            android:layout_marginVertical="16dp"
            android:layout_marginRight="4dp"
            android:text="@string/save"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>