<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvsignup"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.267" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="21dp"
                    app:layout_constraintEnd_toStartOf="@+id/tv_signup"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_keyboard_arrow_left" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                app:cardCornerRadius="31dp"
                app:cardElevation="21dp"
                app:layout_constraintBottom_toTopOf="@+id/txt_input_signup_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <LinearLayout
                    android:layout_width="97dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_female"
                        android:layout_width="90dp"
                        android:layout_height="87dp"

                        app:srcCompat="@drawable/baseline_female" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginStart="36dp"
                app:cardCornerRadius="31dp"
                app:cardElevation="21dp"
                app:layout_constraintBottom_toTopOf="@+id/txt_input_signup_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <LinearLayout
                    android:layout_width="97dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/iv_male"
                        android:layout_width="90dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/baseline_male" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_signup_username"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_margin="10dp"
                app:startIconDrawable="@drawable/baseline_person"
                app:layout_constraintBottom_toTopOf="@+id/txt_input_email_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edit_signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_email_id"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                android:hint="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/txt_input_signup_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_signup_username"
                app:startIconDrawable="@drawable/baseline_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edit_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_signup_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/baseline_lock"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_email_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_edit_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/CustomButton"
                android:text="@string/signup"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_signup_password"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</RelativeLayout>